test/testdata/syntax_errors/return_outside_function.lox
// error: 'return' can only be used inside a function definition
return 2;
